# soroban-split-contract

./: Cargo.toml  README.md
.cargo/: config.toml
src/: lib.rs  test.rs
